Utilisation de la base de données

--- a/TpEtudiant/WebContent/FormEtudiant.html
+++ b/TpEtudiant/WebContent/FormEtudiant.html
@@ -7,10 +7,11 @@
 
 <body>
 	<form action="ServletEtudiant" method="post">
-		<label for="moyenne">Saisissez votre moyenne :</label>
-		<input id="moyenne" name="moyenne"  type="number"/>
+	
+		<label for="code">Votre code étudiant :</label>
+		<input id="code" name="code"  type="number"/>
 		
-		<input type="submit" value="Valider"/>
+		<input type="submit" value="Consulter"/>
 	</form>
 </body>
 </html>
